# armap

./: .gitignore  .pylintrc  README.md  exportlegends.lua  maker.py  pyproject.toml  requirements.txt
armap/: __init__.py  __main__.py  cli.py  config.py  config_parser.py  exceptions.py  legends_parser.py  map_generator.py  utils.py
docs/: TODO.md  legends_naming
examples/: README.md
resources/color-palettes/: carte.ini  coronet.ini  extra.ini  meyers.ini  nordisk.ini  schwarzwald.ini  shadowfox.ini
