[tool.poetry]
name = "armap"
version = "0.1.0"
description = "Automated map maker from Dwarf Fortress maps"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^9.5.0"
opencv-python = "^4.7.0.72"
numpy = "^1.24.2"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
